# NEExT

./: .gitignore  AGENTS.md  CHANGELOG.md  CITATION.cff  CLAUDE.md  CONTRIBUTING.md  DGL_INTEGRATION.md  LICENSE  Makefile  README.ipynb  README.md  Untitled.ipynb  benchmark_embeddings.py  dfdf.csv  example.html  example.ipynb  exp_BZR.py  exp_IMDB.py  exp_MUTAG.py  exp_NCI1.py  exp_PROTEINS.py  k_means.ipynb  post_df.csv  post_feature_creation_sampling_synthetic.csv  post_sample_test.py  pre_feature_creation_sampling_synthetic.csv  pre_sample_test.py  pyproject.toml  readthedocs.yml  setup.py  test.py  test2.py  test_improved_sampling.py  test_networkx.py
.github/: FUNDING.yml
NEExT/: NEExT.py  __init__.py  cli.py  egonet.py  egonets.py  embeddings.py  feature_engine.py  feature_importance.py  features.py  framework.py  global_config.py  graph.py  graph_collection.py  graph_embedding_engine.py  graph_embeddings.py  graph_object.py  helper_functions.py  helper_functions_optimized.py  io.py  ml_models.py  node_embedding_engine.py  node_features.py  singleton_template.py  structural_node_features.py  subgraph_collection.py  subgraph_dataset.py
NEExT/builders/: __init__.py  embedding_builder.py
NEExT/collections/: __init__.py  egonet_collection.py  egonet_collection_safe.py  graph_collection.py  subgraph_collection.py
NEExT/converters/: __init__.py  dgl_converter.py
NEExT/datasets/: __init__.py  graph_dataset.py
NEExT/embeddings/: __init__.py  builder.py  dgl_embeddings.py  embedding_builder.py  embeddings.py  gnn_embeddings.py  graph_embeddings.py
NEExT/experiment_utils/: data_loading.py  embed.py  models.py  supervised.py
NEExT/features/: __init__.py  features.py  node_features.py  structural_node_features.py
NEExT/generators/: __init__.py  _adapters.py  _config.py  anomalies.py  attributes.py  builder.py  generator.py  presets.py
NEExT/graph/: __init__.py  graph.py
NEExT/graphs/: __init__.py  egonet.py  graph.py
NEExT/ml_models/: __init__.py  feature_importance.py  ml_models.py  outlier_detector.py
NEExT/models/: __init__.py  gnn_models.py
NEExT/outliers/: __init__.py  cosine_outlier_detector.py  lgbm_outlier.py  outlier_dataset.py
NEExT/sampling/: __init__.py  base.py  k_hop_sampler.py  random_walk_sampler.py
NEExT/tests/: test_sampling.py
NEExT/web/: __init__.py  app.py  jobs.py  launcher.py  project.py  serializers.py  service.py
NEExT/workbench/: __init__.py  app.py  cli.py  dataset_library.py  docs_content.py  embedding_library.py  feature_library.py  mcp_cli.py  mcp_server.py  mcp_service.py  model_library.py  paths.py  schemas.py  storage.py
ash_experiments/: .gitignore
ash_experiments/manuscript/: Makefile  README.md  aasjournalv7.bst  aastex701.cls  build_manuscript.py  neext_reddit.aux  neext_reddit.bbl  neext_reddit.bib  neext_reddit.blg  neext_reddit.out  neext_reddit.tex
ash_experiments/reddit/: CLEANUP_SUMMARY.md  EXPERIMENT_README.md  README.md  analyze_binary_grouping.py  analyze_class_distribution.py  check_class_distribution.py  create_2pct_sample.py  create_binary_reddit.py  dataset.json  experiment_embedding_dimensions.py  experiment_feature_comparison.py  export_to_gephi.py  quick_test.py  run_20pct_experiment.py  run_binary_experiment.py  run_binary_experiment_rw_with_features.py  run_full_neext_analysis.py  test_neext_integration.py  variance_reduction_recommendations.md
benchmark/: analysis.ipynb  experiment.py
benchmark/experiment_utils/: models.py  supervised.py
data/: BZR_Feat_Imp.csv  IMDB_Feat_Imp.csv  MUTAG_Feat_Imp.csv  NCI1_Feat_Imp.csv  PROTEINS_Feat_Imp.csv  Untitled.ipynb  plots.ipynb  table_of_features.ipynb
data/ABCD/: abcd_communities.csv  abcd_edges.csv  abcd_features.csv  abcd_graph_mapping.csv
data/ABCDO-full/: features.csv  graph_mapping.csv
data/ABCDO-partial/: edges.csv  features.csv  graph_mapping.csv  ground_truth_labels.csv
data/fast_method/: MUTAG.csv  PROTEINS.csv
data/greedy_method/: BZR.csv  PROTEINS.csv
data/random_method/: NCI1.csv  NCI1_old.csv
data/unsupervised_method/: BZR.csv  IMDB.csv  MUTAG.csv  NCI1.csv  NCI1_1.csv  PROTEINS.csv  Untitled.ipynb
data/worst_method/: NCI1.csv
development-lifecycle/: index.html
docs/: Makefile  make.bat  requirements.txt
docs/source/: conf.py  index.rst  installation.rst  quickstart.rst  web_workbench.rst
examples/: mcp_smoke_client.py
experiments/: README.md  ego_abcdo.py  experiment.py  experiments_for_book.py  graph_splitter.ipynb  nexxt_real_world_graphs_experiments.py  node_sampling_experiments.py  outlier_detection_experiments.ipynb  outlier_in_Neighborhood.ipynb  outlier_supervised.ipynb  outlier_supervised_global_structural.ipynb  outlier_unsupervised.ipynb  pygod_data_outliers.ipynb  run.sh  zachary_egonets.ipynb
experiments/air_traffic/: base_config.py  load_data.py
experiments/archive/: outlier_supervised.ipynb  outlier_supervised_global_structural.ipynb
experiments/comparing_different_methods/: main.ipynb
experiments/egonets/: embedding_utils.py  main.py  modeling_utils.py  template.py
experiments/external_datasets/: leaderboard_real_world_datasets_model_accuracies.csv
experiments/outlier_detection/: abcdo_egonet_0.ipynb  abcdo_egonet_1.ipynb  books_egonet_0.ipynb  books_egonet_1.ipynb  config.py  embedding_utils.py  experiment.py  main.py  main_pygod.py  modeling_utils.py
experiments/outlier_search/: barbell.ipynb  chain.ipynb  karate-mirrored.ipynb
experiments/perf/: README.md  custom_feature_benchmark.py
experiments/random_feature_selection/: model_analysis.ipynb  random_model_analysis.ipynb
tests/: TESTDOC.md  _test_format.py  run_all_tests.py  run_test.py  test_community_features.py  test_generators.py  test_gnn_embedding_quality.py  test_gnn_embeddings.py  test_graph_provenance.py  test_helper_functions.py  test_io_networkx.py  test_main_flow.py  test_structural_node_features_parallel.py  test_web_api.py  test_web_workbench.py  test_workbench.py  test_workbench_mcp.py
workbench-ui/: .gitignore  index.html  package-lock.json  package.json  playwright.config.ts  vite.config.ts
(+160 files in other folders)
