[project]
name = "NEExT"
version = "0.2.8"
readme = "README.md"
dependencies = [
    "cairocffi>=1.7.1",
    "colorcet>=3.1.0",
    "fastnode2vec>=0.0.7",
    "imbalanced-learn>=0.13.0",
    "ipykernel>=6.29.5",
    "jupyter>=1.1.1",
    "lightgbm>=4.6.0",
    "matplotlib>=3.10.3",
    "mlflow>=2.22.0",
    "networkx>=3.4.2",
    "optuna>=4.3.0",
    "pandas>=2.2.3",
    "plotly>=6.0.1",
    "pydantic>=2.11.4",
    "pygod>=1.1.0",
    "python-igraph>=0.11.8",
    "ruff>=0.11.9",
    "scikit-learn>=1.6.1",
    "scipy==1.10.1",
    "seaborn>=0.13.2",
    "torch==2.5",
    "torch-geometric>=2.6.1",
    "tqdm>=4.67.1",
    "umap-learn>=0.5.7",
    "vectorizers>=0.2.2",
    "xgboost>=3.0.1",
]

[tool.ruff]
line-length = 150

[tool.uv.sources]
neext = { workspace = true }

[dependency-groups]
dev = [
    "neext[dev,docs,experiments,test]",
]
